tests/Should_succeed/2_Variables/10_GlobalBoolTabAff.decaf
class Test {
	boolean a[1];
	void main(){
		a[0] = true;
		WriteBool(a[0]);
		WriteString("=true");
		WriteString("\n");
	}
}