Tests/Should_fail/6_Context/03_DoubleDeclDiffType.decaf
class Test {
	void main(){
		int a;
		boolean a;
		WriteString("0=1");
		WriteString("\n");
	}
}